added SPECT_dicom_to_interfile to release notes and User's Guide

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -34,6 +34,10 @@
   <li>Parallelised function <code>set_fan_data_add_gaps_help</code> across segments to reduce computation time.
   <br /><a href="https://github.com/UCL/STIR/pull/1168/">PR #1168</a>.
   </li>
+  <li>New utility <tt>SPECT_dicom_to_interfile</tt> which reads a DICOM file with SPECT projection data and extracts the data and writes one or more Interfile 3.3 headers
+    (still somewhat preliminary).
+    <br /><a href="https://github.com/UCL/STIR/pull/1182/">PR #1182</a>.
+  </li>
 </ul>
 
 <h3>New examples</h3>
