Change PinholeSPECTUB global variables to class members to fix #1211

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -39,6 +39,9 @@
   <li>Global variables in SPECTUB have been substituted by class members, such that multiple SPECTUB projectors can be used.
     <br /><a href="https://github.com/UCL/STIR/pull/1169/">PR #1169</a>.
   </li>
+  <li>Global variables in PinholeSPECTUB have been substituted by class members, such that multiple PinholeSPECTUB projectors can be used.
+    <br /><a href="https://github.com/UCL/STIR/pull/1211/">PR #1211</a>.
+  </li>
   <li>Scatter estimation is now smoothed in axial direction for BlocksOnCylindrical scanners.
     <br /><a href="https://github.com/UCL/STIR/pull/1172/">PR #1172</a>.
   </li>
