add PR info to release notes [ci skip]

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -103,6 +103,7 @@
   <li>add .h and .i as dependencies for SWIG generated wrappers to make sure they get rebuild.
     (Currently adding all .h files, which is too much, but CMake needs a fix before we can do
     this properly).
+    <br /><a href="https://github.com/UCL/STIR/pull/1218/">PR #1218</a>.
     </li>
 </ul>
 
