prepare CListEventCylindricalScannerWithDiscreteDetectors for non-cylindrical
- move all functionality to template class CListEventScannerWithDiscreteDetectors<ProjDataInfoT>
- keep CListEventCylindricalScannerWithDiscreteDetectors as derived class such that this change
is backwards compatible

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -107,6 +107,15 @@
     </li>
 </ul>
 
+<h3>Changes for developers</h3>
+<ul>
+  <li>moved all functionality in <code>CListEventCylindricalScannerWithDiscreteDetectors</code> to template class
+    <code>CListEventScannerWithDiscreteDetectors</code> (templated in <code>ProjDataInfoT</code>). This enables
+    re-use for generic/blocksoncylindrical scanners.
+    <br /><a href="https://github.com/UCL/STIR/pull/1222/">PR #1222</a>.
+  </li>
+</ul>
+
 
 <h3>Known problems</h3>
 <ul>
