--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,6 +11,7 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
+<li><a href="release_5.1.htm">version 5.1.1 (dated 26 Augustus 2023)</a></li>
 <li><a href="release_5.1.htm">version 5.1.0 (dated 14 Jan 2023)</a></li>
 <li><a href="release_5.0.htm">version 5.0.2 (dated 26 May 2022)</a></li>
 <li><a href="release_5.0.htm">version 5.0.1 (dated 11 May 2022)</a></li>
