--- a/documentation/release_5.1.htm
+++ b/documentation/release_5.1.htm
@@ -41,6 +41,7 @@
 <h2>Patch release info</h2>
 <ul>
   <li> 5.1.0 released 14/01/2023</li>
+  <li> 5.1.1 released 26/08/2023 (2 fixes for numerical precision in tests)</li>
 </ul>
 
 <h2> Summary for end users (also to be read by developers)</h2>
