clean-up and doc of stir_timings
also added extra options for friendlier usage

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -55,6 +55,11 @@
     (still somewhat preliminary).
     <br /><a href="https://github.com/UCL/STIR/pull/1182/">PR #1182</a>.
   </li>
+  <li>
+    The new <tt>stir_timings</tt> utility  is mostly useful for developers,
+    but you could use it to optimise the number of OpenMP threads to use for your data.
+    <br /><a href="https://github.com/UCL/STIR/pull/1237/">PR #1237</a>.
+  </li>
 </ul>
 
 <h3>New examples</h3>
