--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -105,6 +105,7 @@
 
 <h3>Build system and dependencies</h3>
 <ul>
+  <li>CMake 3.12 is now required on Windows. (It will be required on all platforms in the next version).</li>
   <li>We now use CMake's <a href=https://gitlab.kitware.com/cmake/community/-/wikis/doc/tutorials/Object-Library>OBJECT library feature</a> for the registries. This avoids re-compilation of the registries for every executable and therefore speeds-up building time. Use of STIR in an external project is not affected as long as the recommended practice was followed. This is now documented in the User's Guide.
     <br /><a href="https://github.com/UCL/STIR/pull/1141/">PR #1141</a>.
   </li>
