rewrite ProjDataInMemory to avoid streams
It was derived from ProjDataFromStream, which meant we had to write less code.
However, this meant it was slower than just doing the copies from memory directly.

Also, due to a limitation in boost::interprocess::bufferstream, total size
was limited to 2 GB.

Bits of the code are currently ugly to be compatible with both master and the TOF branch.

Fixes #1240

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -126,6 +126,10 @@
     re-use for generic/blocksoncylindrical scanners.
     <br /><a href="https://github.com/UCL/STIR/pull/1222/">PR #1222</a>.
   </li>
+  <li>rewritten <code>ProjDataInMemory</code> to avoid streams, causing a speed-up of some
+    operations, and removing a limit of total size of 2GB.
+    <br /><a href="https://github.com/UCL/STIR/pull/1260/">PR #1260</a>.
+  </li>
 </ul>
 
 
