Update release_5.2.htm to reflect bug fix

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -26,7 +26,8 @@
 
 <h3>Bug fixes</h3>
 <ul>
-<li>Scatter estimation was setting initial activity image to 1 at set-up, effectively ignoring the initial image, aside from geometric info.</li>
+  <li>Scatter estimation was setting initial activity image to 1 at set-up, effectively ignoring the initial image, aside from geometric info.</li>
+  <li>Setting SPECTUB resolution model with STIR python or SIRF divided slope by 10 in error. The problem did not occur when set using parameter file</li>
 </ul>
 
 <h3>New functionality</h3>
