add Succeeded.succeeded() method
this enables more concise code (avoiding the need for comparing with Succeeded::yes
which is especially verbose in Python).

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -95,6 +95,8 @@
     This is to reduce the default output during iterative reconstructions.
   <br /><a href="https://github.com/UCL/STIR/pull/1243/">PR #1243</a>.
   </li>
+  <li>The <code>Succeeded</code> class has a new method <code>bool succeeded()</code> enabling more concise code (avoiding the need for comparing with <code>Succeeded::yes</code> which is especially verbose in Python).
+    </li>
 </ul>
 
 <h3>Deprecated functionality</h3>
