--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -63,14 +63,18 @@
   </li>
 </ul>
 
-<h3>New examples</h3>
-<ul>
-</ul>
-
-<h4>Python</h4>
+<h4>Python (and MATLAB)</h4>
 <ul>
   <li>Examples use <code>stir.ProjData.read_from_file</code> as opposed to <code>stir.ProjData_read_from_file</code>. The former is supported since SWIG 3.0, and the <a href="https://swig.org/Doc4.1/Python.html#Python_nn20">default from SWIG 4.1</a>.
-    </li>
+  </li>
+  <li>Addition of <code>DetectionPosition</code> and <code>DetectionPositionPair</code>.</li>
+  <li><code>bin.time_frame_num</code> is now no longer a function in Python, but acts like a variable
+    (as the other <code>Bin</code> members).
+  </li>
+</ul>
+
+<h3>New examples</h3>
+<ul>
 </ul>
 
 <h3>Changed functionality</h3>
