[SWIG] added RadionuclideDB

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -71,10 +71,12 @@
   <li><code>bin.time_frame_num</code> is now no longer a function in Python, but acts like a variable
     (as the other <code>Bin</code> members).
   </li>
+  <li>Addition of <code>RadionuclideDB</code></li>
 </ul>
 
 <h3>New examples</h3>
 <ul>
+  <li><tt>examples/python/construct_projdata_demo.py</tt> illustrates constructing a <code>ProjDataInMemory</code></li>
 </ul>
 
 <h3>Changed functionality</h3>
