--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -41,6 +41,7 @@
     hard-coded variables for the Siemens mMR have been removed. Further testing of this functionality is still required however.
     <br /><a href="https://github.com/UCL/STIR/pull/1182/">PR #1182</a>.
   </li>
+  <li>Interfile header parsing now correctly identifies keywords that contain a colon by checking for <tt>:=</tt>./li>
 </ul>
 
 <h3>New functionality</h3>
