use different min/max thresholds for scatter scale for mMR example [ci skip]
Fixes #1163

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -127,7 +127,10 @@
   <br /><a href="https://github.com/UCL/STIR/pull/1243/">PR #1243</a>.
   </li>
   <li>The <code>Succeeded</code> class has a new method <code>bool succeeded()</code> enabling more concise code (avoiding the need for comparing with <code>Succeeded::yes</code> which is especially verbose in Python).
-    </li>
+  </li>
+  <li>The example files for the Siemens mMR now use lower min/max thresholds for the (single) scatter scale. This gives better results, see <a href="https://github.com/UCL/STIR/issues/1163/">Issue #1163</a>.
+  <br /><a href="https://github.com/UCL/STIR/pull/1279/">PR #1279</a>.
+  </li>
 </ul>
 
 <h3>Deprecated functionality</h3>
