--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -141,7 +141,7 @@
   </li>
 </ul>
 
-<h3>Deprecated functionality</h3>
+<h3>Deprecated functionality and upcoming changes to required tool versions</h3>
 <ul>
   <li>The following functions (previously used for upsampling the scatter estimate) have been
     made obsolete or replaced, and will be removed in STIR version 6.0.0: <code>interpolate_axial_position</code>, <code>extend_sinogram_in_views</code> and <code>extend_segment_in_views</code>
@@ -150,12 +150,14 @@
     and should be replaced by their respective versions that use <code>SegmentIndices</code>, <code>ViewgramIndices</code> or <code>SinogramIndices</code>. The former will not be
     compatible with TOF information that will be introduced in version 6.0.0.
   </li>
-  <li>STIR version 6.0.0 will require C++ 14 (currently we require C++ 11, but already support C++ 20).</li>
+  <li>Use of the AVW library to read Analyze files will be removed in 6.0, as this has not been checked in more than 15 years. Use ITK instead.</li>
+  <li>GE VOLPET and IE support will be removed in 6.0, as we have no files to test this, and it's obsolete anyway.</li>
+  <li>STIR version 6.0.0 will require C++ 14 (currently we require C++ 11, but already support C++ 20) and CMake 3.14.</li>
 </ul>
 
 <h3>Build system and dependencies</h3>
 <ul>
-  <li>CMake 3.12 is now required on Windows. (It will be required on all platforms in STIR 6.0).</li>
+  <li>CMake 3.12 is now required on Windows.</li>
   <li>We now use CMake's <a href=https://gitlab.kitware.com/cmake/community/-/wikis/doc/tutorials/Object-Library>OBJECT library feature</a> for the registries. This avoids re-compilation of the registries for every executable and therefore speeds-up building time. Use of STIR in an external project is not affected as long as the recommended practice was followed. This is now documented in the User's Guide.
     <br /><a href="https://github.com/UCL/STIR/pull/1141/">PR #1141</a>.
   </li>
