update release 5.2.0 dates

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -20,7 +20,7 @@
 
 <h2>Patch release info</h2>
 <ul>
-  <li> 5.2.0 released ??/??/2023</li>
+  <li> 5.2.0 released 30/10/2023</li>
 </ul>
 
 <h2> Summary for end users (also to be read by developers)</h2>
