--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,6 +11,8 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
+<li><a href="release_5.2.htm">version 5.2.0 (dated 30 October 2023)</a></li>
+<li><a href="release_5.1.htm">version 5.1.2 (dated 10 September 2023)</a></li>
 <li><a href="release_5.1.htm">version 5.1.1 (dated 26 Augustus 2023)</a></li>
 <li><a href="release_5.1.htm">version 5.1.0 (dated 14 Jan 2023)</a></li>
 <li><a href="release_5.0.htm">version 5.0.2 (dated 26 May 2022)</a></li>
@@ -46,7 +48,7 @@ the ChangeLog is the definite (but tedious) information.
 
 <!-- Created: Wed Jul 19 16:03:02 BST 2000 -->
 <!-- hhmts start -->
-Last modified: January 02 2023
+Last modified: 29 October 2023
 <!-- hhmts end -->
   </body>
 </html>
