tiny fix to html

--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -42,7 +42,7 @@
     hard-coded variables for the Siemens mMR have been removed. Further testing of this functionality is still required however.
     <br /><a href="https://github.com/UCL/STIR/pull/1182/">PR #1182</a>.
   </li>
-  <li>Interfile header parsing now correctly identifies keywords that contain a colon by checking for <tt>:=</tt>./li>
+  <li>Interfile header parsing now correctly identifies keywords that contain a colon by checking for <tt>:=</tt>.</li>
   <li>
     The <code>set_up()</code> method of the ray-tracing projection matrix now skips further processing
     if it was already called with data of the same characteristics. This will means that any cached data
