--- a/documentation/release_5.2.htm
+++ b/documentation/release_5.2.htm
@@ -7,7 +7,7 @@
   <body>
     <h1>Summary of changes in STIR release 5.2</h1>
 
-<p>This version is 100% backwards compatible with STIR 5.0 as far as usage goes. However, there are <b> changes in the output of scatter estimation and ECAT8 normalisation<b>, see below for more information.
+<p>This version is 100% backwards compatible with STIR 5.0 as far as usage goes. However, there are <b> changes in the output of scatter estimation and ECAT8 normalisation</b>, see below for more information.
 </p>
 <h2>Overall summary</h2>
 
