make ProjDataInfo*NoArcCorr::get_bin_for_det_pair private
Use get_bin_for_det_pos_pair instead.

Addresses https://github.com/UCL/STIR/issues/105

--- a/documentation/release_notes_TOF.htm
+++ b/documentation/release_notes_TOF.htm
@@ -118,7 +118,8 @@ from the above):</H2>
 
 <h3>Backward incompatibities</h3>
 <ul>
-<li>
+<li><code>ProjDataInfo*NoArcCorr::get_bin_for_det_pair</code> is now private. 
+  Use <code>get_bin_for_det_pos_pair</code> instead.
 </li>
 </ul>
 
