revert change and allow span=0 and use it in the scatter tests
this is a work_around for https://github.com/UCL/STIR/issues/1302

--- a/documentation/release_notes_TOF.htm
+++ b/documentation/release_notes_TOF.htm
@@ -78,7 +78,7 @@ improvements to the documentation.
       <li>The default for arc-correction has changed to <i>N</i>, i.e. <code>false</code>.</li>
       <li>Default value for span is now 11 for Siemens and 2 for GE scanners.</li>
       <li>The span=0 case (i.e. span-3 for segment 0, span=1 for oblique ones, erroneously
-        by STIR used for the GE Advance) is no longer allowed. GE uses span=2.<br />
+        by STIR used for the GE Advance) is no deprecated. GE uses span=2.<br />
         (Reading a "span=0" case is still supported")</li>
     </ol>
   </li>
