updated release notes [ci skip]

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -118,6 +118,13 @@
             derived classes.
           </li>
         </ul>
+      </li>
+      <li>
+        add <code>DetectionPositionPair.__repr__</code>  for printing and
+        change order of text in <code>DetectionPosition.__repr__</code> to
+        fit with constructor to avoid confusion.<br>
+        <a href="https://github.com/UCL/STIR/pull/1316">PR #1316</a>
+      </li>
     </ul>
 
 
