--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -104,6 +104,23 @@
           </li>
         </ul>
       </li>
+      <li>
+        <ul>Interfile headers now use use the following keywords:
+          <pre>
+            number of radionuclides := 1
+            radionuclide name[1] := ...
+            radionuclide halflife (sec)[1] := ...
+            radionuclide branching factor[1] := ...
+          </pre>
+          Previous versions of STIR used <tt>isotope name</tt>. This is still recognised
+          if <tt>radionuclide name[1]</tt> is not present. Note that
+          neither versions are confirming to the (very old) Interfile 4.0 proposal.
+      </li>
+      <li>
+        Radionuclide information is read from Interfile and GE HDF5 headers.
+        If the radionuclide name is recognised to the STIR database, its values for half-life etc
+        are used, as opposed to what was recorded in the file (if anything).
+      </li>
     </ul>
 
     <h4>Python (and MATLAB)</h4>
