updated release notes [ci skip]

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -130,6 +130,9 @@
 
     <h4>Python (and MATLAB)</h4>
     <ul>
+      <li> exposed <code>ProjMatrixByBinPinholeSPECTUB</code><br>
+        <a href="https://github.com/UCL/STIR/pull/1366">PR #1366</a>
+      </li>
       <li><a href="https://github.com/UCL/STIR/pull/1288">PR #1288</a>
         <ul>
           <li>
