--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -199,7 +199,9 @@
     </ul>
 
     <h3>Build system</h3>
-    No major changes.
+    <ul>
+      <li>CMake version 3.14 is now required.</li>
+    </ul>
 
     <h3>Known problems</h3>
     <p>See <a href=https://github.com/UCL/STIR/labels/bug>our issue tracker</a>.</p>
