--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -201,6 +201,11 @@
     <h3>Build system</h3>
     <ul>
       <li>CMake version 3.14 is now required.</li>
+      <li>
+        C++-14 is now required.<br>
+        In fact, it is possible that C++-11 still works. If you really need it,
+        you can try to modify the main <tt>CMakeLists.txt</tt> accordingly.
+      </li>
     </ul>
 
     <h3>Known problems</h3>
