removed VOLPET and obsolete GE_IO code

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -51,6 +51,10 @@
        number of views or rings. This was using very old scanners though, and could lead to
        confusion. These guesses have now been removed.
      </li>
+     <li>
+       support for the GE VOLPET format (an old format used by the GE Advance and Discover LS
+       sinograms when using "break-pointing") has been removed.
+     </li>
     </ul>
 
     <h3>Bug fixes</h3>
