remove AVW support

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -52,8 +52,11 @@
        confusion. These guesses have now been removed.
      </li>
      <li>
-       support for the GE VOLPET format (an old format used by the GE Advance and Discover LS
+       (deprecated) support for the GE VOLPET format (an old format used by the GE Advance and Discover LS
        sinograms when using "break-pointing") has been removed.
+     </li>
+     <li>
+       (deprecated) support for the AVW format via the (very old) AnalyzeAVW commercial library has been removed.
      </li>
     </ul>
 
