removed deprecated BinNormalisation::apply/undo members

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -271,6 +271,10 @@
         member variable that needs to be set to <code>false</code> by <code>set_*</code>
         functions and checked by callers.
       </li>
+     <li>
+       (deprecated) <code>BinNormalisation::undo</code> and <code>apply</code> members that
+       take explicit time arguments have been removed.
+     </li>
     </ul>
 
     <h3>New functionality</h3>
