removed code deprecated functions for exptending/interpolating projdata
They were already disabled due to check on STIR_VERSION.

extend_sinogram_in_views, extend_segment_in_views,interpolate_axial_position

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -272,8 +272,17 @@
         functions and checked by callers.
       </li>
      <li>
-       (deprecated) <code>BinNormalisation::undo</code> and <code>apply</code> members that
-       take explicit time arguments have been removed.
+       (deprecated) members/functions have been removed
+       <ul>
+         <li>
+           <code>BinNormalisation::undo</code> and <code>apply</code> members that
+           take explicit time arguments
+         </li>
+         <li>
+           <code>extend_sinogram_in_views</code>, <code>extend_segment_in_views</code>
+           and <code>interpolate_axial_position</code>
+         </li>
+       </ul>
      </li>
     </ul>
 
