add documentation about "override" [ci skip]

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -399,6 +399,9 @@
         <code>STIR_NO_NAMESPACES</code>, <code>STIR_NO_MUTABLE</code>, <code>BOOST_NO_TEMPLATE_SPECIALIZATION</code>,
         <code>BOOST_NO_STRINGSTREAM</code> and various items specifically for VC 6.0.
       </li>
+      <li>
+        Consistently use <code>override</code> in derived classes, via <tt>clang-tidy --modernize-use-override</tt>.
+      </li>
     </ul>
 </body>
 
