[ci skip] adding release notes

--- a/documentation/release_6.0.htm
+++ b/documentation/release_6.0.htm
@@ -62,6 +62,9 @@
     <h3>New functionality</h3>
     <h4>General</h4>
     <ul>
+      <li> Radionuclide database now has a datasource entry with the radionuclide decay table (<a href="http://www.lnhb.fr/accueil/donnees-nucleaires/donnees-nucleaires-tableau/">lnHB</a> ). This makes it traceable to standardised measures of branching ratios, half lives etc. The change is backward compatible and old format is still supported. However we encourage to use the new one, see  <a href="https://github.com/UCL/STIR/blob/master/src/config/radionuclide_info.json">src/config/radionuclide_info.json</a>. </li>
+    </ul>
+    <ul>
       <li>
         <p>
         TOF of course! This is mostly transparent, i.e. normally no changes are required
